--- a/lang/en/compose.lang
+++ b/lang/en/compose.lang
@@ -90,12 +90,13 @@ COMPOSE_CONFIRM_STOP  = Do not ask me for confirmation again.
 COMPOSE_CANCEL        = Cancel
 COMPOSE_ERRORS        = Your article can not be added to the system at this time because:
 
-COMPOSE_CONFIRM_SHOWN    = Once published, this article will be syndicated in the following places. Note that this list is not exhaustive, and your article may be syndicated elsewhere if clients request the feed your article is in at the appropriate visibility level.
-COMPOSE_CONFIRM_HOME     = <b>This article will appear on the School of CS home page!</b>
-COMPOSE_CONFIRM_LEADER   = This article <i>may</i> appear on a leader page on the School of CS website. See <a href='https://wiki.cs.manchester.ac.uk/index.php/Newsagent/Feeds#Current_feeds_and_syndication' target='_blank'>this wiki page</a> for more information.
-COMPOSE_CONFIRM_GROUP    = This article will be visible on internal pages that request the feed set for the article.
-COMPOSE_CONFIRM_NOTIFY   = Copies of the article will be sent to the following recipients via
-COMPOSE_CONFIRM_COUNTING = Fetching recipient counts...
+COMPOSE_CONFIRM_SHOWN     = Once published, this article will be syndicated in the following places. Note that this list is not exhaustive, and your article may be syndicated elsewhere if clients request the feed your article is in at the appropriate visibility level.
+COMPOSE_CONFIRM_HOME      = <b>This article will appear on the School of CS home page!</b>
+COMPOSE_CONFIRM_LEADER    = This article <i>may</i> appear on a leader page on the School of CS website. See <a href='https://wiki.cs.manchester.ac.uk/index.php/Newsagent/Feeds#Current_feeds_and_syndication' target='_blank'>this wiki page</a> for more information.
+COMPOSE_CONFIRM_GROUP     = This article will be visible on internal pages that request the feed set for the article.
+COMPOSE_CONFIRM_NOTIFY    = Copies of the article will be sent to the following recipients via
+COMPOSE_CONFIRM_COUNTING  = Fetching recipient counts...
+COMPOSE_CONFIRM_COUNTWARN = <b>NOTE:</b> where available, the number of users who will receive notifications are shown in [ ] above. These numbers should be treated as <b>approximations</b>: the real number may be lower or higher, depending on overlap between recipients and whether any of the recipients are mailing lists managed outside Newsagent.
 
 COMPOSE_ERR_NOPRESET   = This article has been set to be published as a template, but no template name has been entered.
 COMPOSE_ISPRESET       = <b>This article has been set to be published as a template</b>. It will never be published, and is only visible to you (and admins) within the system. The following publication information only applies to articles created from this template.
