Article list now shows one month at a time.

--- a/lang/en/articlelist.lang
+++ b/lang/en/articlelist.lang
@@ -17,3 +17,5 @@ ALIST_CTRLDELETE     = Delete this article (can't be undone!)
 ALIST_CTRLUNDELETE   = Restore this article
 ALIST_CTRLUNHIDE     = Show this article
 ALIST_CTRLPUBLISH    = Publish this article immediately
+
+ALIST_EMPTYMONTH     = There are no articles available in this month.
