--- a/lang/en/userbar.lang
+++ b/lang/en/userbar.lang
@@ -13,4 +13,4 @@ USERBAR_LOGIN           = Log in
 
 USERBAR_TEMPLATES       = Templates
 
-USERBAR_DOCLINK         = Documentation
+USERBAR_DOCLINK         = Documentation (opens in new window)
