--- a/lang/en/articlelist.lang
+++ b/lang/en/articlelist.lang
@@ -19,3 +19,5 @@ ALIST_CTRLUNHIDE     = Show this article
 ALIST_CTRLPUBLISH    = Publish this article immediately
 
 ALIST_EMPTYMONTH     = There are no articles available in this month.
+
+ALIST_SHOWFEED       = Show feeds:
