--- a/lang/en/articlelist.lang
+++ b/lang/en/articlelist.lang
@@ -21,3 +21,4 @@ ALIST_CTRLPUBLISH    = Publish this article immediately
 ALIST_EMPTYMONTH     = There are no articles available in this month.
 
 ALIST_SHOWFEED       = Show feeds:
+ALIST_RESTORE        = Remove filtering
