Progress towards feed list page.

--- a/lang/en/articlelist.lang
+++ b/lang/en/articlelist.lang
@@ -24,3 +24,5 @@ ALIST_SHOWFEED       = Show feeds:
 ALIST_RESTORE        = Remove filtering
 
 ALIST_MORE           = More...
+
+ALIST_LEVSEL         = Select feeds...
