--- a/lang/en/userbar.lang
+++ b/lang/en/userbar.lang
@@ -14,3 +14,5 @@ USERBAR_LOGIN           = Log in
 USERBAR_TEMPLATES       = Templates
 
 USERBAR_DOCLINK         = Documentation (opens in new window)
+
+USERBAR_FRONT           = Newsagent front page (Feed list)
