Improve display of pending notifications in article list.

--- a/lang/en/articlelist.lang
+++ b/lang/en/articlelist.lang
@@ -38,3 +38,6 @@ ALIST_SHOWMODES      = Status:
 ALIST_MODESEL        = Select states...
 
 ALIST_MORE           = More...
+
+ALIST_MODE           = Mode
+ALIST_SENDTIME       = Send after
