--- a/lang/en/userbar.lang
+++ b/lang/en/userbar.lang
@@ -16,3 +16,6 @@ USERBAR_TEMPLATES       = Templates
 USERBAR_DOCLINK         = Documentation (opens in new window)
 
 USERBAR_FRONT           = Newsagent front page (Feed list)
+
+USERBAR_FEEDS           = RSS Feeds
+USERBAR_TELLUS          = Tell Us!
