--- a/lang/en/userbar.lang
+++ b/lang/en/userbar.lang
@@ -19,3 +19,4 @@ USERBAR_FRONT           = Newsagent front page (Feed list)
 
 USERBAR_FEEDS           = RSS Feeds
 USERBAR_TELLUS          = Tell Us!
+USERBAR_TELLUS_QUEUES   = Tell Us Messages
