Queue list page layout and generation work.

--- a/lang/en/tellus.lang
+++ b/lang/en/tellus.lang
@@ -29,11 +29,12 @@ TELLUS_EMAIL_MANAGE    = To create a Newsagent article from this message, move i
 TELLUS_QLIST_TITLE       = Tell Us Messages
 TELLUS_QLIST_QLIST       = Queues
 TELLUS_QLIST_NOQUEUES    = No queues available
-TELLUS_QLIST_NAME        = Queue
+TELLUS_QLIST_NAME        = Name
 TELLUS_QLIST_NEW         = Unread messages
 TELLUS_QLIST_READ        = Read messages
 TELLUS_QLIST_ALL         = Total
 TELLUS_QLIST_MESSAGES    = Messages
+TELLUS_QLIST_BY          = By
 TELLUS_QLIST_SETQUEUE    = Change queue
 TELLUS_QLIST_MAKEARTICLE = Create Newsagent article from this message
 TELLUS_QLIST_REJECT      = Reject (author is notified of this)
