Listing and queue selection working.

--- a/lang/en/tellus.lang
+++ b/lang/en/tellus.lang
@@ -34,7 +34,8 @@ TELLUS_QLIST_NEW         = Unread messages
 TELLUS_QLIST_READ        = Read messages
 TELLUS_QLIST_ALL         = Total
 TELLUS_QLIST_MESSAGES    = Messages
-TELLUS_QLIST_BY          = By
+TELLUS_QLIST_ADDED       = Added
+TELLUS_QLIST_BY          = by
 TELLUS_QLIST_SETQUEUE    = Change queue
 TELLUS_QLIST_MAKEARTICLE = Create Newsagent article from this message
 TELLUS_QLIST_REJECT      = Reject (author is notified of this)
