--- a/lang/en/tellus.lang
+++ b/lang/en/tellus.lang
@@ -35,6 +35,9 @@ TELLUS_QLIST_NEW         = Unread messages
 TELLUS_QLIST_READ        = Read messages
 TELLUS_QLIST_ALL         = Total
 TELLUS_QLIST_MESSAGES    = Messages
+TELLUS_QLIST_SELALL      = Select all
+TELLUS_QLIST_SELNONE     = Select none
+
 TELLUS_QLIST_ADDED       = Added
 TELLUS_QLIST_BY          = by
 TELLUS_QLIST_SETQUEUE    = Change queue
