Working towards message moving/API.

--- a/lang/en/tellus.lang
+++ b/lang/en/tellus.lang
@@ -45,3 +45,6 @@ TELLUS_QLIST_SETQUEUE    = Change queue
 TELLUS_QLIST_MAKEARTICLE = Create Newsagent article from this message
 TELLUS_QLIST_REJECT      = Reject (author is notified of this)
 TELLUS_QLIST_DELETE      = Delete
+
+TELLUS_QLIST_ERR_NOMOVETOPERM = You do not have permission to move messages to the selected queue.
+TELLUS_QLIST_ERR_NOMOVEPERM   = You do not have permission to move one or more selected messages.
