--- a/lang/en/tellus.lang
+++ b/lang/en/tellus.lang
@@ -46,11 +46,14 @@ TELLUS_QLIST_MAKEARTICLE = Create article
 TELLUS_QLIST_REJECT      = Reject
 TELLUS_QLIST_DELETE      = Delete
 TELLUS_QLIST_MSGVIEW     = View message
+TELLUS_QLIST_REJTITLE    = Reject messages
+TELLUS_QLIST_REJFORM     = You are about to reject one or more Tell Us messages. If you want to send a rejection notification to the message author, you can enter some appropriate text in the box below. The same notification will be sent to the author of each rejected message. If you do not want to send a rejection notification, leave the text box empty.
 
 TELLUS_QLIST_ERR_NOMOVETOPERM = You do not have permission to move messages to the selected queue.
 TELLUS_QLIST_ERR_NOMOVEPERM   = You do not have permission to move one or more selected messages.
 TELLUS_QLIST_ERR_NOMSGID      = No message ID specified.
 TELLUS_QLIST_ERR_NOVIEWPERM   = You do not have permission to view this message.
 TELLUS_QLIST_ERR_NODELPERM    = You do not have permission to delete one or more selected messages.
+TELLUS_QLIST_ERR_NOREJPERM    = You do not have permission to reject one or more selected messages.
 
 TELLUS_QLIST_POP_CANCEL  = Close
