Support for multiselect of read messages.

--- a/lang/en/tellus.lang
+++ b/lang/en/tellus.lang
@@ -46,6 +46,7 @@ TELLUS_QLIST_MESSAGES    = Messages
 TELLUS_QLIST_SELALL      = All
 TELLUS_QLIST_SELNONE     = None
 TELLUS_QLIST_SELNEW      = Unread
+TELLUS_QLIST_SELREAD     = Read
 
 TELLUS_QLIST_ADDED       = Added
 TELLUS_QLIST_BY          = by
