Warning about bad schedule names.

--- a/lang/en/compose.lang
+++ b/lang/en/compose.lang
@@ -125,3 +125,5 @@ COMPOSE_AUTOSAVE_LOAD     = Restore autosave
 COMPOSE_AUTOSAVE_CHECKING = Checking for autosave...
 COMPOSE_AUTOSAVE_LOADING  = Restoring autosave...
 COMPOSE_AUTOSAVE_SAVING   = Saving autosave...
+
+COMPOSE_ERR_BADSCHEDULE   = Unable to locate an ID for the selected schedule.
