--- a/lang/en/newsletter.lang
+++ b/lang/en/newsletter.lang
@@ -16,3 +16,6 @@ NEWSLETTER_LIST_SAVED  = Article order saved
 
 NEWSLETTER_ERR_NOSORT  = No sort information in posted data
 NEWSLETTER_ERR_BADSORT = The sort data receieved by the API cannot be parsed.
+
+NEWSLETTER_LIST_PREVIEW  = Preview: '***newsletter***'
+NEWSLETTER_LIST_REQUIRED = This section is required, but it contains no articles. This newsletter can not be published until at least one article is added to this section.
