--- a/lang/en/newsletter.lang
+++ b/lang/en/newsletter.lang
@@ -2,6 +2,7 @@
 NEWSLETTER_LIST_TITLE = Newsletter Editor
 NEWSLETTER_PREVIEW    = Preview this issue
 NEWSLETTER_PUBLISH    = Publish this issue
+NEWSLETTER_NOPUBLISH  = You do not have permission to publish this newsletter.
 
 NEWSLETTER_TYPE        = Type:
 NEWSLETTER_TYPE_MANUAL = Manual (click 'publish' to release this issue)
