--- a/lang/en/userbar.lang
+++ b/lang/en/userbar.lang
@@ -7,6 +7,8 @@ USERBAR_ARTICLE_LIST    = Article list
 USERBAR_COMPOSE         = Add an article
 USERBAR_SITE_SETTINGS   = Administer site
 
+USERBAR_NEWSLETTER_LIST = Newsletter editor
+
 USERBAR_LOGIN_USER      = Username
 USERBAR_LOGIN_PASS      = Password
 USERBAR_LOGIN           = Log in
