Template to show when there are no newsletters.

--- a/lang/en/newsletter.lang
+++ b/lang/en/newsletter.lang
@@ -1,4 +1,4 @@
-
+NEWSLETTER_NONEWS     = No newsletters found
 NEWSLETTER_LIST_TITLE = Newsletter Editor
 NEWSLETTER_PREVIEW    = Preview this issue
 NEWSLETTER_PUBLISH    = Publish this issue
