--- a/lang/en/newsletter.lang
+++ b/lang/en/newsletter.lang
@@ -26,3 +26,6 @@ NEWSLETTER_PUBLISHED      = Newsletter published successfully.
 NEWSLETTER_PUBLISHBLOCK   = Publication blocked; one or more required sections empty!
 
 NEWSLETTER_API_BADNAME = Illegal characters detected in newsletter name.
+NEWSLETTER_API_PUBLISHED = Newsletter published successfully!<br /><br />You can view the published article by <a href="***viewurl***">clicking here</a>.
+
+NEWSLETTER_PUBLISHING  = Publishing...
